--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,1 +1,15 @@
 @import '../../styles/variables.scss';
+
+
+.navbar{
+    width: 100%;
+    height: 10vh;
+
+    nav{
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        background: $bg;
+    }
+}
